--- a/package.json
+++ b/package.json
@@ -1,5 +1,10 @@
 {
   "dependencies": {
     "package.json": "^2.0.1"
-  }
+  },
+  "name": "speech-budget-tracker",
+  "version": "1.0.0",
+  "main": "index.js",
+  "author": "James-Leroy <jlanvja@gmail.com>",
+  "license": "MIT"
 }
