--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "author": "James-Leroy <jlanvja@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/material": "^5.4.0",
     "@speechly/react-client": "^1.2.0",
     "@speechly/react-ui": "^2.4.0",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^3.7.0",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-chartjs-2": "^4.0.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "^3.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4"
